[package]
name = "install_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#thiserror = { version = "1.0.57", features = [] }

[build.release]
target-cpu="native"
codegen-units = 1
lto = "fat"
rustflags = "-C target-cpu=native"


